@@ -3,6 +3,7 @@ package com.example.be_java_hisp_w23_g3.util;
 import com.example.be_java_hisp_w23_g3.entity.Seller;
 import com.example.be_java_hisp_w23_g3.entity.User;
 
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -21,11 +22,11 @@ public class UserTestDataBuilder {
     public UserTestDataBuilder userWithFollowings() {
         this.id = 1L;
         this.username = "username1";
-        this.following = Set.of(
+        this.following = new HashSet<>(Arrays.asList(
                 new SellerTestDataBuilder().sellerByDefault().withId(101L).build(),
                 new SellerTestDataBuilder().sellerByDefault().withId(102L).build(),
                 new SellerTestDataBuilder().sellerByDefault().withId(103L).build()
-        );
+        ));
         return this;
     }
 
